--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0"
   },
