--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.11.0",
