--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
+    "react-native-pell-rich-editor": "^1.9.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.7.1",
