--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-pell-rich-editor": "^1.9.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-sqlite-storage": "^6.0.1",
     "react-native-svg": "^15.7.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.2.0"
@@ -36,6 +37,7 @@
     "@react-native/metro-config": "0.75.3",
     "@react-native/typescript-config": "0.75.3",
     "@types/react": "^18.2.6",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
