--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/stack": "^6.4.1",
     "react": "18.3.1",
     "react-native": "0.75.3",
+    "react-native-audio-recorder-player": "^3.6.11",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-pager-view": "^6.4.1",
     "react-native-paper": "^5.12.5",
     "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-permissions": "^4.1.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-sqlite-storage": "^6.0.1",
